# ToucanDB

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  fix_linting.py  license.md  pyproject.toml  readme.md  test_basic.py
.github/workflows/: ci.yml  ml-tests.yml  publish.yml  quality.yml  tests.yml
examples/: document_search.py  quick_start.py  semantic_search.py
scripts/: README.md  analyze_project.py
tests/: test_toucandb.py
toucandb/: __init__.py  exceptions.py  ml.py  schema.py  types.py  vector_engine.py
